DevOCL/src/objects/CLQ_Staff_Record__c.object
<CustomObject>
    <description>Provides an overview of all staff members employed by the Program.</description>
    <fields>
        <fullName>CLQ_ACL__c</fullName>
        <description>Administrator Credential Level</description>
        <label>Administrator Credential Level (ACL)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Null</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_BCI_Expiration_Date__c</fullName>
        <label>BCI Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_BCI_Processed__c</fullName>
        <label>BCI Processed</label>
        <picklist>
            <picklistValues>
                <fullName>In Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Results Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Results Not Sent to Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Results Not Sent to State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Results Not Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned, Not Resubmitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehired, No Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conviction/Child Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Rehabilitation Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous employer’s record on file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused to be fingerprinted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_BCI_Validated_by_Nightly_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCI Validated by Nightly Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_BCI__c</fullName>
        <label>BCI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_CDA_Verified__c</fullName>
        <inlineHelpText>Select Yes if CDA Verified</inlineHelpText>
        <label>CDA Verified?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Career_Pathways_Level__c</fullName>
        <label>Career Pathways Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Driver_Training_Completed__c</fullName>
        <label>Driver Training Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Update</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Driver_Training_Expiration_Date__c</fullName>
        <label>Driver Training Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Driver_s_License_Expiration_Date__c</fullName>
        <label>Driver’s License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Driver_s_License_on_File__c</fullName>
        <label>Driver’s License on File</label>
        <picklist>
            <picklistValues>
                <fullName>In Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No License on File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Type of License</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Education_Verified__c</fullName>
        <label>Education Verified</label>
        <picklist>
            <picklistValues>
                <fullName>In Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Educational Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocational Information Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS Not Translated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home School Info Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not HS Grad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Expiration_Date__c</fullName>
        <description>CDA Expiration Date.</description>
        <inlineHelpText>CDA Expiration Date.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Staff Record object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_FBI_Expiration_Date__c</fullName>
        <label>FBI Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_FBI_Processed__c</fullName>
        <label>FBI Processed</label>
        <picklist>
            <picklistValues>
                <fullName>Not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Results Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Results Not Sent to Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Results Not Sent to State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Results Not Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned, Not Resubmitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehired, No Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conviction/Child Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Rehabilitation Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous employer’s record on file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused to be fingerprinted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_FBI__c</fullName>
        <label>FBI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Highest_Education_Level__c</fullName>
        <label>Highest Education Level</label>
        <picklist>
            <picklistValues>
                <fullName>High School Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 year-vocational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diploma in Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA or AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAN or ASN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA or BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAN or BSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Level, No Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master&apos;s Degree or M. Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate level beyond Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph. D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type B Prior to 2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In 2nd year of Vocational School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Highest_Verified_Education_Level__c</fullName>
        <label>Highest Verified Education Level</label>
        <picklist>
            <picklistValues>
                <fullName>High School Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GED Earned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 year-vocational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diploma in Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA or AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAN or ASN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA or BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAN or BSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Level, No Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master&apos;s Degree or M. Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate level beyond Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph. D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type B Prior to 2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In 2nd year of Vocational School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>CLQ_Inspection__c</referenceTo>
        <relationshipLabel>Staff Records</relationshipLabel>
        <relationshipName>Staff_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Major_Highest_Education_Level__c</fullName>
        <label>Major - Highest Education Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Major_Highest_Verified_Education__c</fullName>
        <label>Major -Highest Verified Education  Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Medical__c</fullName>
        <label>Medical</label>
        <picklist>
            <picklistValues>
                <fullName>In Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/V</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Medical_on_File__c</fullName>
        <label>Medical on File</label>
        <picklist>
            <picklistValues>
                <fullName>In Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Form Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not within 12 months of hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunization Info Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending verification</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_NCS_Expiration_Date__c</fullName>
        <label>NCS Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staff Records</relationshipLabel>
        <relationshipName>Staff_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Non_Conviction_Statement__c</fullName>
        <label>Non-Conviction Statement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Non_conviction_Statement_Signed__c</fullName>
        <label>Non-conviction Statement Signed</label>
        <picklist>
            <picklistValues>
                <fullName>In Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Statement on File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Annual Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dates Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin. Signature Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Back Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending verification</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_OPIN__c</fullName>
        <label>OPIN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Policy_Statement__c</fullName>
        <label>Policy Statement</label>
        <picklist>
            <picklistValues>
                <fullName>In Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/V</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>Lead teacher/head teacher/co-teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator/Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substitute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cook/Nutrition/Dietician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant director/ Assistant Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Staff/Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher&apos;s aide, teacher assistant/student aide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Service Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus Driver/Bus aide/Bus monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education specialist/ Education Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist/Therapist (speech/language, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director ( Administrator)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preschool Staff member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Teaching Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended care staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant toddler care staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substitute teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substitute staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsible Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Transaction</label>
        <referenceTo>CLQ_Program_Transaction__c</referenceTo>
        <relationshipLabel>Staff Records</relationshipLabel>
        <relationshipName>Staff_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Staff_Member_Will_Operate_Vehicles__c</fullName>
        <label>Staff Member Will Operate Vehicles</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Staff_Orientation_Training_Completed__c</fullName>
        <label>Staff Orientation Training Completed</label>
        <picklist>
            <picklistValues>
                <fullName>In Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Orientation Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form Not Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Still_Employed__c</fullName>
        <label>Still Employed?</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Unverified_Points__c</fullName>
        <description>Can be entered manually or populated from OPR Pull</description>
        <label>Unverified Points</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Used_In_Ratio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used In Ratio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Verified_Points__c</fullName>
        <description>Can be entered manually or populated from OPR Pull</description>
        <label>Verified Points</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orientation_Complete__c</fullName>
        <label>Orientation Complete</label>
        <picklist>
            <picklistValues>
                <fullName>In Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/V</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Staff Record</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Staff #{000000}</displayFormat>
        <label>Staff Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>